public/styles/style.css
/****************************************************************
                                                                *
                            MAIN STYLING                        *                        
                                                                *
*****************************************************************/
:root {
  --color-main-text: #1B1B1B;
  --white-primary-color: #FFFFFF;
  --web-orange-primary-color: #F7A100;
  --regent-blue-primary-color: #E6F2F7;
  --lochmara-primary-color: #0071B3;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Proxima Nova", sans-serif;
  font-size: 16px;
  line-height: 1.6;
  color: var(--color-main-text);
}

@media (min-width: 55rem) {
  .desktopSpacing {
  margin-left: calc(50% - (80% / 2));
  margin-right: calc(50% - (80% / 2));
  }
}

/****************************************************************
                                                                *
                          Head.EJS Navbar                       *                        
                                                                *
*****************************************************************/

/*********** mobile ***********/
@media (min-width: 20rem) {
  .nav--wrapper {
    display: flex;
    align-items: center;

    /* position: relative; */
  }

  .logo {
    width: 4.5em;
  }


  label.hamburger {
    font-size: 1.2rem;
    position: relative;
    fill: var(--color-main-text);
    display: grid;
    justify-items: center;
    align-content: center;
    line-height: 1em;
    margin-left: auto;
  }

  label.hamburger::after {
    content: ' menu';
    font-size: .5em;
    line-height: 1em;
  }


  input[type="checkbox"] {
    display: none;
  }

  .mobile {
    display: flex;
    flex-direction: column;
    display: none;
  }

  nav {
    height: 60px;
    padding: 0.8em;
    background-color: var(--web-orange-primary-color);
    color: var(--white-primary-color);
    position: relative;
  }

    ul.mobile.tablet-desktop {
        display: none;
    }

    ul.nav__icons {
        display: none;
    }

  nav > li {
    list-style-type: none;
    margin-bottom: 0.5em;
    text-align: center;
  }

  li a {
    text-decoration: none;
  }

    ul.mobile.tablet-desktop li a:hover{
        /*background-color: #FFE2FF;*/
    }

    ul.nav__icons li a:hover{
        /*background-color: #FFE2FF;*/
    }

  #toggle:checked ~ ul {
    display: block;
    padding: .5em;
    position: absolute;
    top: 100%;
    background-color: var(--web-orange-primary-color);
  }

  #toggle:checked ~ ul:nth-of-type(1) {
    left: 0;
    right: 0;
  }

  #toggle:checked ~ ul:nth-of-type(2) {
    right: 0;
  }

  .nav__icons a > svg {
    display: none;
  }
}

/********** tablet  **********/
@media (min-width: 38rem) {
    .logo {
      width: 5.5em;
    }

    input[type="checkbox"], label.hamburger {
      display: none;
    }

    nav {
      width: 100%;
      height: 60px;
      padding: 0;
    }

    .nav--wrapper {
      margin-left: calc(50% - (80% / 2));
      margin-right: calc(50% - (80% / 2));
      height: 100%;
    }

    ul.mobile.tablet-desktop li a:hover{
        /*background-color: #FFE2FF;*/
        height: auto;
    }

    ul.nav__icons li a:hover{
        /*background-color: #FFE2FF;*/
        height: auto;
    }
    .nav__icons {
      display: flex;
      flex-direction: row;
      gap: 16px;
      margin-left: auto;
    }

    a > svg {
      width: 30px;
      padding-right: 10px;
    }

    #toggle ~ ul,
    #toggle:checked ~ ul {
      display: flex;
      position: relative;
      top: unset;
      background-color: var(--web-orange-primary-color);
    }
  
    #toggle ~ ul:nth-of-type(1),
    #toggle:checked ~ ul:nth-of-type(1) {
      left: unset;
      right: unset;
    }
  
    #toggle ~ ul:nth-of-type(2),
    #toggle:checked ~ ul:nth-of-type(2) {
      right: unset;
    }

    .nav__icons a {
      color: var(--white-primary-color);
    }

    .tablet-desktop a {
      color: var(--white-primary-color);
    }

    .nav__icons a > svg {
      fill: var(--white-primary-color);
    }

    .nav__icons > a{
      padding-right: auto;
    }

    .nav__icons a > svg {
      display: inline-block;
      gap: 20px;
    }

    .tablet-desktop {
      display: inline-flex;
      flex-direction: row;
      
      gap: 16px;
    }

    input[type="checkbox"], label.hamburger {
      display: none;
    }

  
}


@media (min-width: 55rem) {
    .nav--wrapper {
        margin-left: calc(50% - (80% / 2));
        margin-right: calc(50% - (80% / 2));
    }

}

/****************************************************************
                                                                *
                          Index.EJS Cards                       *                        
                                                                *
*****************************************************************/
  main {
    margin: 16px;
  
    & h1 {
      margin-bottom: 10px;
    }  
  
    & hr {
      background-color: var(--web-orange-primary-color);
      margin-bottom: 10px;
      width: 50px;
      height: 5px;
    }
  }
  
    .container {
      display: flex;
      flex-direction: column;
      margin-top: 1em;
      gap: 16px;
    }
      
    .grid__container {
      display: flex;
      flex-direction: column;
    }

    .card__list{
      /*display: grid;*/
      /*grid-row-gap: 1em;*/
      /*grid-template-rows: 4em 2em 2em 2em 2em 2em 2em;*/

    }
    .card__image {
      width: 100%;
      height: 276px;
      object-fit: cover;
    }
  
    .card__link:before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background-color: transparent;
      z-index: 0;
    }
    .card__link{
      color: #0071B3;
    }
  
    & article {
      display: flex;
      /* flex-direction: column; */
      /*font-size: 16px;*/
      padding: 10px;
    }
  
    & img {
      border-radius: 5px 5px 0 0;
      object-fit: fill;
    }
  
    &  ul > a {
      text-decoration: none;
    }
  
    & ul > a:hover {
      color: white;
    }
  
    & article > ul,li {
      display: block;
      padding: 3px;
    }

    .card__favorites {
      position: relative;
      border: solid 0.1em var(--regent-blue-primary-color);
      height: auto;
      width: auto;
      border-top-left-radius: 16px;
      border-top-right-radius: 16px;
      background-color: var(--white-primary-color);
      margin-bottom: 20px;
      z-index: 0;
    }
    
    
    article > h2,a {
      text-decoration: none;
      color: var(--color-main-text);
    }

    .card__content {
      text-overflow: ellipsis;
    }

    .button__card {
      display: inline-block;
      padding: 10px 20px;
      width: auto;
      background-color: var(--lochmara-primary-color);
      color: var(--white-primary-color);
      text-decoration: none;
      border-radius: 5px;
      margin-bottom: 10px;
      position: relative;
      z-index: 1;
    }

    .button__card:hover {
      background-color: var(--web-orange-primary-color);
    }
  
    /* Tablet */
    @media (min-width: 45rem) {
      .grid__container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 2rem;
      }

      .card__favorites {
        background-color: var(--white-primary-color);
        width: 100%;  /* Use full width available in the grid */
        border-top-left-radius: 16px;
        border-top-right-radius: 16px;
        height: auto;
      }

      img {
        width: 100%;
        border-radius: 16px;
      }
    }

    /* Desktop */
    @media (min-width: 55rem) {
      .grid__container {
        grid-template-columns: repeat(3, 1fr);
      }

      .card__favorites {
        height: auto;
        border-top-left-radius: 16px;
      border-top-right-radius: 16px;
      }
    }

/****************************************************************
                                                                *
                        Index.EJS Ratings                       *                        
                                                                *
*****************************************************************/
form {
  z-index: 1;
}

input[type="radio"] {
  display: none;
}

input[type="submit"] {
  display: none;
}

.scorefield{
  display: grid;
  grid-template-rows: 5em 5em 5em 5em;
  row-gap: 1em;
  /*place-items: center;*/
}

.fieldsetRatingCard {
  font-weight: bold;
  display: flex;
  border: none;
  /*background-color: deepskyblue;*/
}


.titleRating{
  /*text-align: center;*/
  font-weight: bold;
}

.labelRating:hover{
  scale: 2;
  transition: 0.5s;
  color: var(--web-orange-primary-color);
}

.labelRating:after{
  width: 1.5em;
  content: "★";
  font-size: 2em;
  display: grid;
  place-items: center;
}

.labelRating{
  color: #a4a2a2;
  /*background-color: #0071B3;*/
}
.fieldsetRating:checked{
  border-color: #0071B3;
}

/*hier word gecheckt of de input checked is en het bijbehorende label*/
.fieldsetRating input:checked + label {
  color: #eea02e;
}

/*door deze code worden de andere sterren daarachter ook groen door het sibling selectord */
.fieldsetRating label:has(~ :checked) {
  color: #eea02e;
  transition: 1s;
}

/*hier worden de sterren geel als er op gehoverd word behalve de sterren die gechekt zijn*/
.fieldsetRating label:hover:not(input:checked + label) {
  cursor: pointer;
  color: #eea02e;
}

/*hier worden de sterren geel en overgenomen op label vanwege het sibling selector*/
.fieldsetRating label:has(~ label:hover):not(input:checked + label) {
  color: #eea02e;
}


.ratingsFavorieten {
  position: relative;
  z-index: 1;
}

.button__card {
  margin-top: 10px;
}


/****************************************************************
                                                                *
                        HUIS.EJS CAROUSEL                       *                        
                                                                *
*****************************************************************/
.carousel {
  width: 100%;
  height: 166px;
}

.card-container {
  width: 100%;
  display: flex;
  width: calc(100% - 16px);
  margin: 8px;
  flex: 0 0 calc(100% - 16px);
}

.card {
  min-width: 250px;
  height: 230px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--color-main-text);
  border-radius: 8px;
}

.card:hover {
  background: var(--web-orange-primary-color);
}

.card-container::-webkit-scrollbar {
  display: none;
}

.card-container {
  overflow-x: auto;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
  gap: 8px;
}

.card {
  scroll-snap-align: start;
}

/****************************************************************
                                                                *
                          HUIS.EJS TEKST                        *                        
                                                                *
*****************************************************************/
.detail {
  border-top: solid 0.2em var(--color-main-text);
  margin-top: 5em;
  padding-top: 2em;
}

.detail > ul {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.detail, .description {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 1em;
  gap: 1em;
}

.description-line {
  border-top: solid 0.2em var(--web-orange-primary-color);
  margin-top: 1em;
  padding-top: 1em;
  width: 100%;
  text-align: center;
}

.description {
  font-size: 1em;
  line-height: 1.5;
}

.agent {
  border: solid 0.2em var(--color-main-text);
  padding: 5em;
  text-align: center;
  background: var(--secondary-bg-color);
  
  & p {
    padding-bottom: 1em;
  }
}

